# AContrarioTankDetection

./: README.md  build_crops.py  conversion_pix_lonlat.py  detect_tanks.py  utils.py
TankDetection/: .build_crops.py.swm  .build_crops.py.swn  .build_crops.py.swo  .build_crops.py.swp  .read_detections_json.py.swp  .run_from_tile.py.swp  .utils.py.swo  .utils.py.swp  build_crops.py  clustering_close_tif.py  convert2asc.sh  detect_tanks.py  my_processing2.sh  my_processing_zoom.sh  read_detections_json.py  utils.py
TankDetection/C_exe/: devernay  image2asc  old_devernay
devernay_1.1/: CMakeLists.txt  devernay_cmd.c  io.c
devernay_1.1/iio/: CMakeLists.txt  cmake_install.cmake  iio.c
im_test/: T50SPF_20200521T024549_B02.tif  T50SPF_20200521T024549_B03.tif  T50SPF_20200521T024549_B04.tif  T50SPF_20200521T024549_B08.tif
